loadshapes working with profess
